--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kartik Singla</title>
+    <link rel="prefetch" href="./images/1.mp4">
+    <link rel="prefetch" href="./images/3.mp4">
+    <link rel="prefetch" href="./images/k.jpg">
+    <link rel="prefetch" href="./images/1.mp4">
     <link rel="icon" href="./images/k.jpg">
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
