--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="main">
         <div id="home">
             <div id="nav">
-                <a class="target text-target2" id="logo" href="">Kartik Singla</a>
+                <h1 class="target text-target2" id="logo" href="">Kartik Singla</h1>
                 <div  id="right">
                     <a href="https://linkedin.com/in/ks209" target="_blank"><i class="ri-linkedin-line magnet"></i></a>
                     <a href="https://github.com/ks209" target="_blank"><i class=" magnet ri-github-fill"></i></a>
