--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <div id="main">
+        <div id="loader">
+            <h1>Perseverance</h1>
+            <h1>pays</h1>
+            <h1>off.</h1>
+        </div>
         <div id="home">
             <div id="nav">
                 <h1 class="target text-target2" id="logo" href="">Kartik Singla</h1>
@@ -189,8 +194,12 @@
 
 <!-- <br><br><br><br><br><br><br> -->
 
+<div style="display: flex; align-items: center; justify-content: center; padding: 10px;">
+    <a href="https://www.buymeacoffee.com/kartiksingla"><img width="300px" height="auto" src="https://img.buymeacoffee.com/button-api/?text=Buy me a Pizza&emoji=🍕&slug=kartiksingla&button_colour=000000&font_colour=ffffff&font_family=Comic&outline_colour=ffffff&coffee_colour=FFDD00" /></a>
+</div>
 
 
+<footer>
 <div class="foot">
     <div class="footupper">
             <h1>"Learn endlessly, triumph boundlessly."
@@ -202,6 +211,7 @@
         <a href="mailto:ks2092003@gmail.com">
             <i class="ri-mail-line magnet"></i>
         </a>
+        
         <a href="https://github.com/ks209" target="_blank">
             <i class="ri-github-fill magnet"></i>
         </a>
@@ -209,12 +219,14 @@
             <i class="ri-twitter-x-fill magnet"></i>
         </a>
     </div>
+    
     <div class="c">
         Handcrafted by me <i class="ri-copyright-line"></i>
          Kartik Singla
     </div>
 </div>
     </div>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
