--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div id="main">
-        <div id="loader">
+        <!-- <div id="loader">
             <h1>Perseverance</h1>
             <h1>pays</h1>
             <h1>off.</h1>
-        </div>
+        </div> -->
         <div id="home">
             <div id="nav">
                 <h1 class="target text-target2" id="logo" href="">Kartik Singla</h1>
